angular/src/less/moped.less
/* Generic pane rules */
body { margin: 0; }
.pane-row, .pane-col { overflow: hidden; position: absolute; }
.pane-row { left: 0; right: 0; }
.pane-col { top: 0; bottom: 0; }
.scroll-x { overflow-x: auto; -webkit-overflow-scrolling: touch; }
.scroll-y { overflow-y: auto; -webkit-overflow-scrolling: touch; }

/* Bootstrap overrides */
a:hover,
a:active {
  text-decoration: none;
}

.navbar-toggle { 
  border: none; 
  margin: 0; 
  float: left; 
  z-index: 100; 
  border-radius: 0; 
}
.navbar-toggle .icon-bar { 
  background-color: #999; 
}
.navbar-toggle.outtaway { 
  background-color: #333; 
}

/* Custom styles */
body {
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
}

.menu { 
  width: 240px; 
  background-color: #333;
  color: #eee; 
  z-index: -1; 
}

.menu .panel {
  background-color: transparent;
  border-radius: 0;
  margin-bottom: 10px;
}

.menu .panel-heading {
  background-color: #333;
  color: #fff;
  text-indent: 26px;
  background-repeat: no-repeat;
  background-position: 8px 8px;
}

.menu a > .panel-heading:hover {
  background-color: #555;
}

.menu .panel-heading.search {
  background-image: url(../images/search-icon.png);
}

.menu .panel-heading.playlists {
  background-image: url(../images/playlists-icon.png);
}

.menu .panel-heading.radio {
  background-image: url(../images/radio-icon.png);
}

.menu .panel-heading.settings {
  background-image: url(../images/settings-icon.png);
}

.menu .panel-body {
  background-color: #444;
  color: #fff;
}

.menu .list-group {
  background-color: #444;
  font-size: 90%;
  border: none;
}

.menu .list-group-item {
  color: #ccc;
  background-color: transparent;
  border: none;
}

.menu .list-group-item:hover {
  background-color: #555;
}

.menu .glyphicon {
  color: #fff;
}

.menu .btn-search {
  position: absolute;
  left: -9999px;
  width: 1px;
  height: 1px;
}

.main { 
  left: 0; 
  right: auto;
  width: 100%; 
  background-color: #fff;   
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -ms-transform: translate3d(0, 0, 0);
  -o-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  -webkit-transition: all 0.25s ease-out;  
  -moz-transition: all 0.25s ease-out;
  -ms-transition: all 0.25s ease-out;
  -o-transition: all 0.25s ease-out;
  transition: all 0.25s ease-out;
}

.main .container {
  margin-left: 0;
  margin-right: auto;
}

.title-bar { 
  background-color: #eee; 
  color: #666; 
  line-height: 32px; 
  padding: 0 10px;
}

.title-bar a {
  margin: 0 5px;
}

.title-bar .working {
  height: 24px;
  width: 50px;
  margin-top: 4px;
  background: url(../images/ajax-loader.gif) no-repeat
}

.main.outtaway { 
  -webkit-transform: translate3d(240px, 0, 0);
  -moz-transform: translate3d(240px, 0, 0);
  -ms-transform: translate3d(240px, 0, 0);
  -o-transform: translate3d(240px, 0, 0);
  transform: translate3d(240px, 0, 0);
}

.maincontent { 
  top: 32px; 
  bottom: 186px; 
  padding: 0 10px; 
}

.view-title h3 {
  margin: 10px 0;
}

.view-title h4 {
  margin: 14px 0;
}

.view-title img {
  margin: 0 15px;
}

.view-title .title-date {
  margin: 16px 10px;
}

.albumimagelist,
.artistimagelist {
  list-style: none;
  padding: 0;
  margin: 0;
}

.albumimagelist li,
.artistimagelist li {
  list-style: none;
  float: left;
  width: 176px;
  height: 176px;
  overflow: hidden;
  font-size: 90%;
  position: relative;
}


.albumimagelist img {
  display: block;
  margin: 1px;
}

.artistimagelist img {
  display: block;
  width: 174px;
  margin: 1px;
}

.imgoverlay {
  position: absolute;
  bottom: 0;
  color: #fff;
  background: #000;
  background: rgba(0, 0, 0, 0.5);
  width: 174px;
  margin: 1px;
  padding: 3px;
}

.nowplaying { 
  height: 136px; 
  bottom: 50px; 
  background-color: #333;
  color: #fff;
}

.nowplaying-thumb {
  float: left;
  height: 64px;
  width: 64px;
  margin: 2px 10px 2px -12px;
}

.nowplaying h5 {
  margin: 5px 0;
}

.nowplaying a {
  color: #fff;
}

.nowplaying .time {
  margin: 5px 0 6px;
}

.nowplaying .time-slider,
.nowplaying .slider-horizontal  {
  width: 100%;
}

.controls { 
  height: 50px; 
  bottom: 0; 
  background-color: #933; 
}

.controls ul {
  margin: 10px 3px;
}

.controls a {
  display: inline-block;
}

.controls a:hover,
.controls a:active {
  color: #cef;
}

.controls .glyphicon {
  color: #fff;
  font-size: 20px;
}

.controls .volume-slider {
  width: 120px;
}

.controls .slider.slider-horizontal .slider-track {
  top: 30%;
}

.slider-selection {
  background: #6ce;
}

.albumcover {
  margin-bottom: 10px;
}

/* Responsive adaptations */
@media screen and (min-width: 768px) {
  .main { left: 240px; right: 0; width: auto;  }
  .maincontent { bottom: 118px; }
  .nowplaying { height: 68px;}
}

// Overrides

// Small grid
@media (min-width: @screen-sm-min) {
  .container {
    max-width: @container-sm;
    width: auto;
  }
}

// Medium grid
@media (min-width: @screen-md-min) {
  .container {
    max-width: @container-md;
    width: auto;
  }
}

// Large grid
@media (min-width: @screen-lg-min) {
  .container {
    max-width: @container-lg;
    width: auto;
  }
}

